--- a/Dung-TinTuc/muctintuc/baitaplon.html
+++ b/Dung-TinTuc/muctintuc/baitaplon.html
@@ -141,23 +141,23 @@
                     </tr>
                     <tr>
                         <td>Vô địch</td>
-                        <td><a href="" class="hover-link">Thép Xanh Nam Định</a> (lần thứ 2)</td>
+                        <td><a href="../../Trinh-doiBong/teams/txnđ.html" class="hover-link">Thép Xanh Nam Định</a> (lần thứ 2)</td>
                     </tr>
                     <tr>
                         <td>Xuống hạng</td>
-                        <td><a href="" class="hover-link">Khánh Hòa</a></td>
+                        <td><a href="../../Trinh-doiBong/teams/kkh.html" class="hover-link">Khánh Hòa</a></td>
                     </tr>
                     <tr>
                         <td>Á quân</td>
-                        <td><a href="" class="hover-link">MerryLand Quy Nhơn Bình Định</a></td>
+                        <td><a href="../../Trinh-doiBong/teams/tbđ.html" class="hover-link">MerryLand Quy Nhơn Bình Định</a></td>
                     </tr>
                     <tr>
                         <td>Hạng ba</td>
-                        <td><a href="" class="hover-link">Hà Nội</a></td>
+                        <td><a href="../../Trinh-doiBong/teams/hanoifc.html" class="hover-link">Hà Nội</a></td>
                     </tr>
                     <tr>
                         <td><a href="https://vi.wikipedia.org/wiki/Gi%E1%BA%A3i_b%C3%B3ng_%C4%91%C3%A1_V%C3%B4_%C4%91%E1%BB%8Bch_Qu%E1%BB%91c_gia_2023%E2%80%9324" class="hover-link">AFC Champions League 2</a></td>
-                        <td><a href="" class="hover-link">Thép Xanh Nam Định</a></td>
+                        <td><a href="../../Trinh-doiBong/teams/txnđ.html" class="hover-link">Thép Xanh Nam Định</a></td>
                     </tr>
                     <tr>
                         <td>Số trận đấu</td>    
@@ -334,13 +334,13 @@
                 </tr>
                 <tr>
                     <td>5</td>
-                    <td><a href="" class="hover-link">Nguyễn Văn Quyết</a></td>
+                    <td><a href="../../Trinh-doiBong/profile/nvquyet.html" class="hover-link">Nguyễn Văn Quyết</a></td>
                     <td>Hà Nội</td>
                     <td>11</td>
                 </tr>
                 <tr>
                     <td>5</td>
-                    <td><a href="" class="hover-link">Joseph Mpande</a></td>
+                    <td><a href="../../Trinh-doiBong/profile/josepmpande.html" class="hover-link">Joseph Mpande</a></td>
                     <td>Hải Phòng</td>
                     <td>11</td>
                 </tr>
