--- a/Hien-bangXepHang/vesan.html
+++ b/Hien-bangXepHang/vesan.html
@@ -9,7 +9,7 @@
 <body>
     
     <div class="container">
-        <button onclick="window.location.href='Webbongda.html'"  >Trang chủ</button>
+        <button onclick="window.location.href='../Vanh-trangChu/v_league.html'"  >Trang chủ</button>
         <h2>Đặt vé xem bóng đá</h2>
         <form action="#" method="post" id="bookingForm">
             <label for="name">Họ và tên:</label>
