--- a/Hien-bangXepHang/Webbongda.html
+++ b/Hien-bangXepHang/Webbongda.html
@@ -28,8 +28,8 @@
                         <li><a href="../Dung-TinTuc/muctintuc/baitaplon.html">Tin tức</a></li>
                     </ul>
                     <ul class="login">
-                        <li id="dangnhap"><a href="../../Hien-bangXepHang/dangnhap.html">Đăng nhập</a></li>
-                        <li id="muave"><a href="../../Hien-bangXepHang/vesan.html">Mua vé</a></li>
+                        <li id="dangnhap"><a href="../Hien-bangXepHang/dangnhap.html">Đăng nhập</a></li>
+                        <li id="muave"><a href="../Hien-bangXepHang/vesan.html">Mua vé</a></li>
                     </ul>
                 </nav>
             </div>
