--- a/Vanh-trangChu/highlight_khoanhkhac.html
+++ b/Vanh-trangChu/highlight_khoanhkhac.html
@@ -18,35 +18,15 @@
                     <img src="./logo/logo_ngang.png" alt="">
                 </a>
                 <ul class="main-menu">
-                    <li><a href="v_league.html">Trang chủ</a></li>
-                    <li><a href="">Thông tin giải đấu</a>
-                        <ul class="sub-menu">
-                            <li><a href="">Lịch thi đấu</a>
-                            <li>
-                            <li><a href="">Quy định luật lệ</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="">Bảng xếp hạng</a>
-                        <ul class="sub-menu">
-                            <li><a href="">Bảng xếp hạng</a>
-                            <li>
-                            <li><a href="">Kết quả</a></li>
-
-                        </ul>
-                    </li>
-                    <li><a href="">Quán lí đội bóng</a>
-                        <ul class="sub-menu">
-                            <li><a href="">Đội bóng</a>
-                            <li>
-                            <li><a href="">Cầu thủ</a></li>
-                        </ul>
-
-                    </li>
-                    <li><a href="">Tin tức</a></li>
+                    <li><a href="./v_league.html">Trang chủ</a></li>
+                    <li><a href="../Nghia-giaiDau/giaiDau.html">Thông tin giải đấu</a></li>
+                    <li><a href="../Hien-bangXepHang/Webbongda.html">Bảng xếp hạng</a></li>
+                    <li><a href="../Trinh-doiBong/qlvl.html">Quản lí đội bóng</a></li>
+                    <li><a href="../Dung-TinTuc/muctintuc/baitaplon.html">Tin tức</a></li>
                 </ul>
                 <ul class="login">
-                    <li id="dangnhap"><a href="">Đăng nhập</a></li>
-                    <li id="dangky"><a href="">Đăng ký</a></li>
+                    <li id="dangnhap"><a href="../Hien-bangXepHang/dangnhap.html">Đăng nhập</a></li>
+                    <li id="muave"><a href="../Hien-bangXepHang/vesan.html">Mua vé</a></li>
                 </ul>
             </nav>
         </div>
