--- a/Hien-bangXepHang/dangnhap.html
+++ b/Hien-bangXepHang/dangnhap.html
@@ -200,7 +200,7 @@
                     document.getElementById('loginUsername').value = '';
                     document.getElementById('loginPassword').value = '';
                     setTimeout(() => {
-                    window.location.href='webbongda.html'
+                    window.location.href='../Vanh-trangChu/v_league.html'
                 }, 2);
                 } else {
                     // Đăng nhập thất bại
