--- a/Dung-TinTuc/muctintuc/baitaplon.html
+++ b/Dung-TinTuc/muctintuc/baitaplon.html
@@ -586,7 +586,7 @@
                     </div>
                     <div class="ft-tt-item-text">
                         <p>CHỊU TRÁCH NHIỆM NỘI DUNG</p>
-                        <P>Từ Anh DŨng(Thành viên nhóm 18 - nhiệm vụ làm Tin Tức)</P>
+                        <P>Từ Anh Dũng(Thành viên nhóm 18 - nhiệm vụ làm Tin Tức)</P>
                     </div>
                 </div>
             </div>
