--- a/Dung-TinTuc/muctintuc/baitaplon.html
+++ b/Dung-TinTuc/muctintuc/baitaplon.html
@@ -532,7 +532,7 @@
         <p><strong>Chú thích:</strong> (H) – Sân nhà; (A) – Sân khách</p>
     
     </div>
-    <button id="scrollToTop">⬆</button>
+    
     <div class="footer">
         <!-- thanh logo -->
          <div class="ft-hea">
@@ -623,6 +623,10 @@
             <img src="img_footer_item/vpf.jpg" alt="">
         </div>
     </div>
+
+    <button id="scrollToTopBtn" onclick="scrollToTop()">&#9650;</button>        
+    <script src="../../Nghia-giaiDau/scroll.js"></script>
+
     <script src="baitaplon.js"></script>
     <script src="https://app.tudongchat.com/js/chatbox.js"></script>
         <script>
