--- a/Vanh-trangChu/v_league.html
+++ b/Vanh-trangChu/v_league.html
@@ -679,6 +679,9 @@
         </div>
     </div>
 
+    <button id="scrollToTopBtn" onclick="scrollToTop()">&#9650;</button>        
+    <script src="../Nghia-giaiDau/scroll.js"></script>
+
 
 
     <script src="js_sxep_bxh.js"> </script>
