--- a/Nghia-giaiDau/giaiDau.html
+++ b/Nghia-giaiDau/giaiDau.html
@@ -1974,7 +1974,7 @@
 
 
     <button id="scrollToTopBtn" onclick="scrollToTop()">&#9650;</button>        
-    <script src="giaiDau.js"></script>
+    <script src="scroll.js"></script>
     <script src="lichThiDau.js"></script>
     <script src="https://app.tudongchat.com/js/chatbox.js"></script>
     <script>
