--- a/Trinh-doiBong/qlvl.html
+++ b/Trinh-doiBong/qlvl.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-    <button id="scrollToTopBtn" onclick="scrollToTop()">&#9650;</button>
+    
     <div class="boc">
         <div class="header_boc">
             <nav class="hop_dung">
@@ -439,6 +439,8 @@
             </div>
         </div>
     </footer>
+    <button id="scrollToTopBtn" onclick="scrollToTop()">&#9650;</button>        
+    <script src="../Nghia-giaiDau/scroll.js"></script>
     <script src="script.js"></script>
     <script src="https://app.tudongchat.com/js/chatbox.js"></script>
         <script>
