--- a/Nghia-giaiDau/giaiDau.html
+++ b/Nghia-giaiDau/giaiDau.html
@@ -1061,7 +1061,7 @@
                                     </div>
                                 </td>
                                 <td><img src="./anh/logo-binhduong.png" class="team-logo" alt="logo-binhduong"></td>
-                                <td class="away-team">Becamex Bình Dương</td>
+                                <td class="away-team"><a href="../Trinh-doiBong/teams/bcmbd.html">Becamex Bình Dương</a></td>
                                 <td>FPT Play</td>
                                 <td>5000</td>
                             </tr> 
@@ -1281,7 +1281,7 @@
                             <tr>
                                 <td>19:15</td>
                                 <td><a href="https://vi.wikipedia.org/wiki/S%C3%A2n_v%E1%BA%ADn_%C4%91%E1%BB%99ng_H%C3%A0ng_%C4%90%E1%BA%ABy" target="_blank">Sân vận động Hàng Đẫy</a></td>
-                                <td class="home-team"><a href="../Trinh-doiBong/teams/cahn.html"></a></td>
+                                <td class="home-team"><a href="../Trinh-doiBong/teams/cahn.html">Công An Hà Nội</a></td>
                                 <td><a href="../Trinh-doiBong/teams/cahn.html"><img src="./anh/logo-conganhanoi.png" class="team-logo" alt="logo-conganhanoi"></a></td>
                                 <td class="score" >
                                 2 - 0
@@ -1751,7 +1751,7 @@
                             <tr>
                                 <td>18:00</td>
                                 <td><a href="https://vi.wikipedia.org/wiki/S%C3%A2n_v%E1%BA%ADn_%C4%91%E1%BB%99ng_L%E1%BA%A1ch_Tray" target="_blank">Sân vận động Lạch Tray</a></td>
-                                <td class="home-team"><a href="../Trinh-doiBong/teams/hp.html"></a></td>
+                                <td class="home-team"><a href="../Trinh-doiBong/teams/hp.html">Hải Phòng</a></td>
                                 <td><a href="../Trinh-doiBong/teams/hp.html"><img src="./anh/logo-haiphong.png" class="team-logo" alt="logo-haiphong"></a></td>
                                 <td class="score" >3 - 1</td>
                                 <td><a href="../Trinh-doiBong/teams/cahn.html"><img src="./anh/logo-conganhanoi.png" class="team-logo" alt="logo-conganhanoi"></a></td>
